--- a/src/client/app/views/main.html
+++ b/src/client/app/views/main.html
@@ -37,10 +37,9 @@
   </div>
   <div class="tab-pane" id="vendors">
     <div class="container container-home-page">
-      <div ng-repeat="items in vendors | groupBy:3" class="row container-trending">
-        <div class="col-trending col-lg-4 col-md-4 col-sm-6" ng-repeat="vendor in items">
+      <div ng-repeat="vendor in vendors">
       	   <vendor-card data="vendor"></vendor-card>
-        </div>
+      </div>
       </div> 
       <div class="footer">
         <p>♥ from the beLocal team</p>
