Changed the position of the vendor image, modified the UI for the selling locations and the products

--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -532,7 +532,7 @@ color: #000 !important;
 
 .faded-box-edge {
     border: 6px solid #E4F3DA !important;
-    padding: 10px 10px 10px 10px;
+    padding: 15px;
     border-radius: 7px;
 }
 
@@ -572,11 +572,8 @@ color: #000 !important;
 
 .icon-map-styles {
   font-size: 40px;
-  text-align: center;
-}
-
-.glyphicon {
   color: #dddddd !important;
+  text-align: center;
 }
 
 .seller-Details-Jumbotron{
@@ -612,4 +609,33 @@ color: #000 !important;
 
 .blah {
   background-color: red;
+}
+
+.beLocal-searchProducts{
+  width:100%;
+}
+
+.dropdown-productFilter{
+  color: #696969;
+}
+
+
+.dropdown-productFilter, a:hover, a:focus{
+  color: #696969;
+  text-decoration: none;
+  background-color: transparent !important;
+  padding-top: 5px;
+}
+
+
+@media (max-width: 768px) {
+  .seller-Details-Jumbotron {
+      text-align: center !important;
+      padding: 40px 0px 5px 0px!important;
+  }
+
+  .vendorAvatar img{
+    max-height: 150px;
+    max-width: 150px;
+  }
 }
