--- a/src/client/app/views/details.html
+++ b/src/client/app/views/details.html
@@ -4,6 +4,7 @@
 <div class="jumbotron seller-Details-Jumbotron">
 
 	<!-- SELLER DETAILS -->
+	<div class="container-vendor-details">
 	<div class="row">
 		<div class="col-sm-4 col-md-3 col-lg-2 vendorAvatar">
 			<img src="http://gradschool.oregonstate.edu/sites/gradschool.oregonstate.edu/files/styles/square_medium/public/default_images/user_icon.png?itok=mbz2tJug">
@@ -13,10 +14,11 @@
 			<div class="HeaderText">
 				ADDRESS: {{vendorDetails.vendor.address.addr_line1}}, {{vendorDetails.vendor.address.city}}, {{vendorDetails.vendor.address.state}}, {{vendorDetails.vendor.address.zipcode}}<br>
 				WEBPAGE: {{vendorDetails.vendor.webpage}}<br>
-				PHONE: {{vendorDetails.vendor.phone}} Ext.{{vendorDetails.vendor.extension}}<br>
+				PHONE: {{vendorDetails.vendor.phone}} ext.{{vendorDetails.vendor.extension}}<br>
 			</div>
 		</div>
 	</div>
+</div>
 </div>
 
 
@@ -29,7 +31,7 @@
 
 	<!-- SELLER DETAILS -->
 	<div class="row faded-box-edge ">
-		A local company that sells produce. This is where the about feild will need to be hooked up to. Lala... lets see what this div looks like when it has some text in it... la la la. Here is some more content...
+		This is where the local vendors can write a bit about themselves.  They can talk about what they can specialize in, their history, etc.  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
 	</div>
 	<br>
 
@@ -37,6 +39,8 @@
 	<div class="breadcrumbs row">
 		{{vendorDetails.vendor.company_name | uppercase}}'S SELLING LOCATIONS
 	</div>
+
+
 
 	<div class="faded-box-edge row"> 
 		<div ng-repeat="location in vendorDetails.locations | orderBy:'name'">	
@@ -48,19 +52,11 @@
 			    	<div class="col-sm-1 icon-map-styles hidden-xs">
 			    		<span class="glyphicon glyphicon-map-marker"></span>
 			    	</div>
-			    	<div class="col-xs-6">
+			    	<div class="col-xs-11">
 				      	<h4 class="panel-title">{{location.name}}</h4>
-				      	{{location.address.addr_line1}}<br>
-				      	{{location.address.city}}, {{location.address.state}}, {{location.address.zipcode}}<br>
-				    </div>
-				    <div class="col-xs-6 col-sm-5 text-align-right">
-				    	{{location.start_time | date:" EEEE',' MMMM d"}}<br>
-				    	{{location.start_time | date:" h:mma' - '"}}
-                    	{{location.end_time | date:" h:mma"}}
-                    	<br>
-                    	<div class="toggle-more-info">
-                    		more information
-                    	</div>
+				      	{{location.address.addr_line1}}, {{location.address.city}}, {{location.address.state}}, {{location.address.zipcode}}
+				      	<br>{{location.start_time | date:" EEEE's:' "}}{{location.start_time | date:" h:mma' - '" | lowercase}}{{location.end_time | date:" h:mma" | lowercase}}
+				      	<span class="toggle-more-info pull-right">more information</span>
 				    </div>
 			    </div>
 			    <div id="demo{{$index}}" class="panel-collapse collapse">
@@ -84,33 +80,34 @@
 	</div>
 
 	<div class="faded-box-edge row">
-		<div class="row hidden-xs">
-			<form class="navbar-form navbar-left beLocal-search col-sm-7" role="search">
-		        <div class="form-group">
-		          <div class="input-group">
-		            <input type="text"  placeholder="Search for vendors or products" class="form-control">
-		            <span class="input-group-btn">
-		              <button class="btn beLocal-btn-filled" type="button">Search</button>
-		            </span>
-		          </div>    
-		        </div>
-		      </form>
-
-		      <ul class="nav navbar-nav pull-right">
-		        <li class="dropdown">
-		          <a class="dropdown-toggle pointer" data-toggle="dropdown">Sort By: Name <span class="caret"></span></a>
-		          <ul class="dropdown-menu" role="menu">
-		            <li><a href="#">Fruits</a></li>
-		            <li><a href="#">Vegetables</a></li>            
-		            <li><a href="#">Preserves</a></li>
-		            <li class="divider"></li>
-		            <li><a href="#">Vendors</a></li>
-		          </ul>
-		        </li>
-		      </ul>
+		<div class="row">
+			<div class=" col-md-7 col-sm-9 col-xs-7">
+				<form class="beLocal-searchProducts" role="search">
+			        <div class="form-group">
+			          <div class="input-group">
+			            <input type="text" placeholder="Search for a product" class="form-control">
+			            <span class="input-group-btn">
+			              <button class="btn beLocal-btn-filled" type="button">Search</button>
+			            </span>
+			          </div>    
+			        </div>
+			    </form>
+		  	</div>
+		  	<!-- NEED TO CHANGE THIS TO WORK AS AN ANGULAR FILTER -->
+		  	<div class="col-md-5 col-sm-3 col-xs-5">
+			    <ul class="nav pull-right">
+			        <li class="dropdown dropdown-productFilter">
+			          <span>Sort by: <a class="dropdown-toggle dropdown-productFilter" data-toggle="dropdown">Name <span class="caret"></span></a></span>
+			          <ul class="dropdown-menu" role="menu">
+			            <li><a href="#">Popular</a></li>
+			            <li><a href="#">New Items</a></li>
+			          </ul>
+			        </li>
+			    </ul>
+			</div>
 		</div>
 
-		<hr style="margin-top:0px; margin-bottom:10px" class="hidden-xs">
+		<hr style="margin-top:0px; margin-bottom:10px">
 
 		<div class="row" id="masonry-container">
 	        <div class="col-trending ms-item col-lg-3 col-md-4 col-sm-6 col-xs-6" ng-repeat="item in vendorDetails.products" >
