--- a/src/client/app/views/details.html
+++ b/src/client/app/views/details.html
@@ -47,16 +47,16 @@
 			<div class="panel-group" id="accordion">
 			  
 			  <!-- expandable pannels part that needs to repeat -->
-			  <div class="panel panel-default">
+			  <div class="panel panel-default" id="accordion">
 			    <div class="panel-heading row" data-toggle="collapse" data-target="#demo{{$index}}">
 			    	<div class="col-sm-1 icon-map-styles hidden-xs">
 			    		<span class="glyphicon glyphicon-map-marker"></span>
 			    	</div>
-			    	<div class="col-xs-11">
+			    	<div class="col-sm-11 col-xs-12">
 				      	<h4 class="panel-title">{{location.name}}</h4>
 				      	{{location.address.addr_line1}}, {{location.address.city}}, {{location.address.state}}, {{location.address.zipcode}}
-				      	<br>{{location.start_time | date:" EEEE's:' "}}{{location.start_time | date:" h:mma' - '" | lowercase}}{{location.end_time | date:" h:mma" | lowercase}}
-				      	<span class="toggle-more-info pull-right">more information</span>
+				      	<br>{{location.start_time | date:" EEEE's:' "}}{{location.start_time | date:" h:mma' to '" | lowercase}}{{location.end_time | date:" h:mma" | lowercase}}
+				      	<span class="toggle-more-info pull-right">more details...</span>
 				    </div>
 			    </div>
 			    <div id="demo{{$index}}" class="panel-collapse collapse">
