Linked vendor details page with product details model.

--- a/src/client/app/views/main.html
+++ b/src/client/app/views/main.html
@@ -62,7 +62,7 @@
 	                   <div class="row">
 	                       <div class="container-fluid col-lg-6 col-md-6 col-sm-6">
 	                           <h4>{{product.name}}</h4>
-	                           <button type="button" class="btn beLocal-btn-filled product-detail-vendor" data-dismiss="modal" ng-click="hideProductDetailsModal()">Vendor Info</button>
+	                           <button type="button" class="btn beLocal-btn-filled product-detail-vendor" data-dismiss="modal" ng-click="goToVendorDetails(product.vendor)">Vendor Info</button>
 	                       </div>
 	                   </div>
 	                </div>			             
