Changed html tag for description.

--- a/src/client/app/views/main.html
+++ b/src/client/app/views/main.html
@@ -70,7 +70,7 @@
 	              
                 <div class="row product-detail-description"> 
                      <h4><strong>Description:</strong></h4> 
-                     <h5>{{ product.description }}</h5>
+                     <p>{{ product.description }}</p>
                 </div>              
             </div>
             
