--- a/src/client/app/views/details.html
+++ b/src/client/app/views/details.html
@@ -96,8 +96,8 @@
 		  	<!-- NEED TO CHANGE THIS TO WORK AS AN ANGULAR FILTER -->
 		  	<div class="col-md-5 col-sm-3 col-xs-5">
 			    <ul class="nav pull-right">
-			        <li class="dropdown dropdown-productFilter">
-			          <span>Sort by: <a class="dropdown-toggle dropdown-productFilter" data-toggle="dropdown">Name <span class="caret"></span></a></span>
+			        <li class="dropdown dropdown-productFilter pointer">
+			          <span data-toggle="dropdown">Sort by:<span class="dropdown-productFilter"> Name <span class="caret"></span></span></span>
 			          <ul class="dropdown-menu" role="menu">
 			            <li><a href="#">Popular</a></li>
 			            <li><a href="#">New Items</a></li>
