item details UI - bug fixes.

--- a/src/client/app/views/main.html
+++ b/src/client/app/views/main.html
@@ -69,7 +69,7 @@
 	                   <div class="row">
 	                       <div class="container-fluid col-lg-6 col-md-6 col-sm-6">
 	                           <h4>{{product.name}}</h4>
-	                           <button type="button" class="btn beLocal-btn-filled product-detail-vendor" data-dismiss="modal" ng-click="goToVendorDetails(product.vendor.id)">Vendor Info</button>
+	                           <a class="pointer product-detail-vendor" data-dismiss="modal" ng-click="goToVendorDetails(product.vendor.id)">Vendor Info</a>
 	                       </div>
 	                   </div>
 	                </div>			             
